tests/baselines/reference/classAndInterfaceMergeConflictingMembers.errors.txt
tests/cases/conformance/classes/classDeclarations/classAndInterfaceMergeConflictingMembers.ts(10,15): error TS2687: All declarations of 'x' must have identical modifiers.
tests/cases/conformance/classes/classDeclarations/classAndInterfaceMergeConflictingMembers.ts(14,5): error TS2687: All declarations of 'x' must have identical modifiers.
tests/cases/conformance/classes/classDeclarations/classAndInterfaceMergeConflictingMembers.ts(18,13): error TS2687: All declarations of 'x' must have identical modifiers.
tests/cases/conformance/classes/classDeclarations/classAndInterfaceMergeConflictingMembers.ts(22,5): error TS2687: All declarations of 'x' must have identical modifiers.


==== tests/cases/conformance/classes/classDeclarations/classAndInterfaceMergeConflictingMembers.ts (4 errors) ====
    declare class C1 {
        public x : number;
    }
    
    interface C1 {
        x : number;
    }
    
    declare class C2 {
        protected x : number;
                  ~
!!! error TS2687: All declarations of 'x' must have identical modifiers.
    }
    
    interface C2 {
        x : number;
        ~
!!! error TS2687: All declarations of 'x' must have identical modifiers.
    }
    
    declare class C3 {
        private x : number;
                ~
!!! error TS2687: All declarations of 'x' must have identical modifiers.
    }
    
    interface C3 {
        x : number;
        ~
!!! error TS2687: All declarations of 'x' must have identical modifiers.
    }